<resources>
    <string name="app_name">DexAndroidNative</string>

    // Menu Bar
    <string name="market">MARKET</string>
    <string name="order">ORDER</string>
    <string name="wallet">WALLET</string>

    // Market
    <string name="tokenName">Name / Vol.</string>
    <string name="lastPrice">Last Price</string>
    <string name="change">24H Change</string>
    <string name="addBtn">+ Add More</string>

    //Market Detail
    <string name="back">◀ BACK</string>
    <string name="vol">Vol</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="priceChart">PRICE CHART</string>
    <string name="depth">DEPTH</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>

    // GNB
    <string name="about">ABOUT</string>
    <string name="notice">NOTICE</string>
    <string name="setting">SETTING</string>
    <string name="dot">●</string>
    <string name="arrow">></string>

    // Splash
    <string name="splashTxt">We have no time to rest</string>

    // Order
    <string name="orderHistory">Order History</string>
    <string name="openOrder">OPEN ORDER</string>
    <string name="amount">AMOUNT</string>
    <string name="price">PRICE</string>
    <string name="total">TOTAL</string>
    <string name="expires">EXPIRES</string>
    <string name="time">TIME</string>
    <string name="trade">TRADE</string>
    <string name="orderBook">ORDER BOOK</string>

    // Login
    <string name="enterNotice">PLEASE ENTER 4 DIGITS PASSWORD</string>


</resources>
