<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defaultBackColor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="101dp"
            android:layout_height="30dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/horizontal_recycler_button"
            android:gravity="center">

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:src="@drawable/ic_star_full" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="INTEREST"
                android:textColor="@color/btnTxtColor" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/horizontal_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:background="@color/boardBg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tokenName"
            android:textColor="@color/btnTxtColor"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lastPrice"
            android:textColor="@color/btnTxtColor"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/change"
            android:textColor="@color/btnTxtColor"
            android:textSize="18dp" />


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/vertical_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" />


</LinearLayout>