<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.NavigationView
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/gradation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="94dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="25dp"
                    android:src="@drawable/ic_exit" />

                <ImageView
                    android:layout_width="137dp"
                    android:layout_height="88dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    android:src="@drawable/cp_dex_logo" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="47dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/naviBtnBg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/dot"
                        android:textColor="@color/dotBg"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:gravity="left"
                        android:text="@string/about"
                        android:textColor="@color/defaultTextColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/arrow"
                        android:textColor="@color/defaultTextColor"
                        android:textSize="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="47dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/naviBtnBg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/dot"
                        android:textColor="@color/dotBg"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:gravity="left"
                        android:text="@string/notice"
                        android:textColor="@color/defaultTextColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/arrow"
                        android:textColor="@color/defaultTextColor"
                        android:textSize="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="47dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/naviBtnBg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/dot"
                        android:textColor="@color/dotBg"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:gravity="left"
                        android:text="@string/setting"
                        android:textColor="@color/defaultTextColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/arrow"
                        android:textColor="@color/defaultTextColor"
                        android:textSize="20dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.design.widget.NavigationView>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/defaultBackColor"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/navi"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:src="@drawable/ic_menu" />

            <ImageView
                android:layout_width="137dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:src="@drawable/cp_dex_logo" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="@drawable/gradation">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/market"
                android:textColor="@color/defaultTextColor" />
        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </android.support.v4.view.ViewPager>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@drawable/gradation"
            android:baselineAligned="false"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/market_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="14dp"
                    android:text="@string/market"
                    android:textColor="@color/defaultTextColor" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_market" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/order_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="14dp"
                    android:text="@string/order"
                    android:textColor="@color/defaultTextColor" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_order" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wallet_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="14dp"
                    android:text="@string/wallet"
                    android:textColor="@color/defaultTextColor" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_wallet" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</android.support.v4.widget.DrawerLayout>

