<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:background="@color/defaultBackColor"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/back"
                android:textColor="@color/btnTxtColor" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center">

            <Spinner
                android:id="@+id/market_detail_spinner"
                android:layout_width="180dp"
                android:layout_height="35dp"
                android:background="@drawable/add_btn_shape">

            </Spinner>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_star_full" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/defaultBackColor"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="0.00964 ↑"
                        android:textColor="@color/redBtn"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="21dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginRight="15dp"
                                android:text="$0.22"
                                android:textColor="@color/defaultTextColor" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="left">

                            <TextView
                                android:layout_width="65dp"
                                android:layout_height="19dp"
                                android:layout_marginLeft="15dp"
                                android:background="@drawable/green_btn_shape"
                                android:gravity="center"
                                android:text="-0.35%"
                                android:textColor="@color/defaultTextColor" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4"
                            android:gravity="center">

                            <TextView
                                android:layout_width="36dp"
                                android:layout_height="21dp"
                                android:background="@drawable/add_btn_shape"
                                android:gravity="center"
                                android:text="@string/vol"
                                android:textColor="@color/btnTxtColor"
                                android:textSize="11dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="6">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="43.48806"
                                android:textColor="@color/defaultTextColor" />
                        </LinearLayout>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4"
                            android:gravity="center">

                            <TextView
                                android:layout_width="36dp"
                                android:layout_height="21dp"
                                android:background="@drawable/add_btn_shape"
                                android:gravity="center"
                                android:text="@string/high"
                                android:textColor="@color/btnTxtColor"
                                android:textSize="11dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="6">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="0.01567"
                                android:textColor="@color/defaultTextColor" />
                        </LinearLayout>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4"
                            android:gravity="center">

                            <TextView
                                android:layout_width="36dp"
                                android:layout_height="21dp"
                                android:background="@drawable/add_btn_shape"
                                android:gravity="center"
                                android:text="@string/low"
                                android:textColor="@color/btnTxtColor"
                                android:textSize="11dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="6">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="0.009052"
                                android:textColor="@color/defaultTextColor" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/gradation"
                android:gravity="center"
                android:text="@string/priceChart"
                android:textColor="@color/defaultTextColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="375dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="93dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="bottom"
                            android:text="@string/price"
                            android:textColor="@color/defaultTextColor" />

                        <ImageView
                            android:id="@+id/price_chart"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/red_bar" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="bottom"
                            android:text="@string/depth"
                            android:textColor="@color/defaultTextColor" />

                        <ImageView
                            android:id="@+id/depth_chart"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/green_bar" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">


                    <ImageView
                        android:id="@+id/chart_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="20dp"
                        android:src="@drawable/price_chart" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/gradation"
                android:gravity="center"
                android:text="@string/orderBook"
                android:textColor="@color/defaultTextColor" /> <!--OrderBook-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="21dp"
                    android:background="@color/boardBg"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/buy"
                            android:textColor="@color/btnTxtColor" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/price"
                            android:textColor="@color/btnTxtColor" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sell"
                            android:textColor="@color/btnTxtColor" />

                    </LinearLayout>

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/order_book_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>

        </LinearLayout>


    </ScrollView> <!--end of ScrollView-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/defaultBackColorTransparent"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        tools:visibility="invisible">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/token_buy"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@drawable/green_btn_shape"
                android:text="@string/buy"
                android:textColor="@color/defaultTextColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/token_sell"
                android:layout_width="150dp"
                android:layout_height="54dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/red_btn_shape"
                android:text="@string/sell"
                android:textColor="@color/defaultTextColor" />
        </LinearLayout> <!--Buy,Sell Button-->

    </LinearLayout>
</FrameLayout>